--- a/external-dns/base/cert-manager/validatingwebhookconfiguration.yaml
+++ b/external-dns/base/cert-manager/validatingwebhookconfiguration.yaml
@@ -7,6 +7,7 @@ metadata:
     app.kubernetes.io/name: webhook
   annotations:
     certmanager.k8s.io/inject-apiserver-ca: "true"
+    argocd.argoproj.io/sync-wave: "1"
 webhooks:
   - name: certificates.admission.certmanager.k8s.io
     namespaceSelector:
