--- a/argocd-config/base/team-management.yaml
+++ b/argocd-config/base/team-management.yaml
@@ -13,4 +13,6 @@ spec:
     server: https://kubernetes.default.svc
     namespace: sandbox
   syncPolicy:
-    automated: {}
+    automated:
+      prune: false
+      selfHeal: true
