--- a/argocd/base/deployment.yaml
+++ b/argocd/base/deployment.yaml
@@ -24,15 +24,22 @@ spec:
             - "20"
             - --operation-processors
             - "10"
-          image: quay.io/cybozu/argocd:1.1.0-rc1.1
+          image: quay.io/cybozu/argocd:1.2.0-rc2.1
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8082
+            initialDelaySeconds: 5
+            periodSeconds: 10
           name: argocd-application-controller
           ports:
             - containerPort: 8082
           readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8082
             initialDelaySeconds: 5
             periodSeconds: 10
-            tcpSocket:
-              port: 8082
       serviceAccountName: argocd-application-controller
 ---
 apiVersion: apps/v1
@@ -86,7 +93,7 @@ spec:
             - argocd-repo-server
             - --redis
             - argocd-redis:6379
-          image: quay.io/cybozu/argocd:1.1.0-rc1.1
+          image: quay.io/cybozu/argocd:1.2.0-rc2.1
           livenessProbe:
             initialDelaySeconds: 5
             periodSeconds: 10
@@ -135,7 +142,7 @@ spec:
       containers:
         - command:
             - argocd-server
-          image: quay.io/cybozu/argocd:1.1.0-rc1.1
+          image: quay.io/cybozu/argocd:1.2.0-rc2.1
           livenessProbe:
             httpGet:
               path: /healthz
