--- a/metallb/overlays/tokyo0/kustomization.yaml
+++ b/metallb/overlays/tokyo0/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
+bases:
   - ../../base
+resources:
   - configmap.yaml
+
