--- a/monitoring/overlays/stage0/kustomization.yaml
+++ b/monitoring/overlays/stage0/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
+bases:
   - ../../base
+resources:
   - grafana/ingressroute.yaml
 patches:
   - grafana/statefulset.yaml
