--- a/teleport/overlays/gcp/kustomization.yaml
+++ b/teleport/overlays/gcp/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
+bases:
   - ../../base
+resources:
   - certificate.yaml
 patchesStrategicMerge:
   - deployment.yaml
