--- a/test/rook/object_bucket/common.yaml
+++ b/test/rook/object_bucket/common.yaml
@@ -135,6 +135,7 @@ spec:
                       useAllDevices:
                         type: boolean
                       deviceFilter: {}
+                      devLinksFilter: {}
                       directories:
                         type: array
                         items:
@@ -154,6 +155,7 @@ spec:
                 useAllDevices:
                   type: boolean
                 deviceFilter: {}
+                devLinksFilter: {}
                 location: {}
                 directories:
                   type: array
