Update YAML files for OB/OBC.

--- a/test/rook/object_bucket/pod.yaml
+++ b/test/rook/object_bucket/pod.yaml
@@ -22,7 +22,7 @@ apiVersion: objectbucket.io/v1alpha1
 kind: ObjectBucketClaim
 metadata:
   name: ceph-bucket
-  namespace: rook-ceph
+  namespace: default
 spec:
   generateBucketName: obc-poc
   storageClassName: rook-ceph-bucket
