--- a/argocd/base/configmap.yaml
+++ b/argocd/base/configmap.yaml
@@ -19,7 +19,7 @@ data:
           orgs:
           - name: cybozu-private
   resource.customizations: |
-    certmanager.k8s.io/Certificate:
+    cert-manager.io/Certificate:
       health.lua: |
         hs = {}
         if obj.status ~= nil then
@@ -37,7 +37,7 @@ data:
         hs.status = "Progressing"
         hs.message = "Waiting for certificate"
         return hs
-    certmanager.k8s.io/Issuer:
+    cert-manager.io/Issuer:
       health.lua: |
         hs = {}
         if obj.status ~= nil then
