--- a/cert-manager/base/mutatingwebhookconfiguration.yaml
+++ b/cert-manager/base/mutatingwebhookconfiguration.yaml
@@ -9,12 +9,12 @@ metadata:
     certmanager.k8s.io/inject-apiserver-ca: "true"
     argocd.argoproj.io/sync-wave: "1"
 webhooks:
-  - name: webhook.certmanager.k8s.io
+  - name: webhook.cert-manager.io
     rules:
       - apiGroups:
-          - "certmanager.k8s.io"
+          - "cert-manager.io"
         apiVersions:
-          - v1alpha1
+          - v1alpha2
         operations:
           - CREATE
           - UPDATE
@@ -30,4 +30,4 @@ webhooks:
       service:
         name: kubernetes
         namespace: default
-        path: /apis/webhook.certmanager.k8s.io/v1beta1/mutations
+        path: /apis/webhook.cert-manager.io/v1beta1/mutations
