--- a/teleport/overlays/gcp/certificate.yaml
+++ b/teleport/overlays/gcp/certificate.yaml
@@ -1,4 +1,4 @@
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
 metadata:
   name: teleport-proxy-selfsign
@@ -8,7 +8,7 @@ metadata:
 spec:
   selfSigned: {}
 ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: teleport-proxy-ca
@@ -23,7 +23,7 @@ spec:
   commonName: "ca.proxy.teleport"
   isCA: true
 ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Issuer
 metadata:
   name: teleport-proxy-ca
@@ -34,7 +34,7 @@ spec:
   ca:
     secretName: teleport-proxy-ca
 ---
-apiVersion: certmanager.k8s.io/v1alpha1
+apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
   name: teleport-proxy-tls
