--- a/cert-manager/base/apiservice.yaml
+++ b/cert-manager/base/apiservice.yaml
@@ -1,17 +1,8 @@
 apiVersion: apiregistration.k8s.io/v1beta1
 kind: APIService
 metadata:
-  name: v1beta1.webhook.certmanager.k8s.io
+  name: v1beta1.webhook.cert-manager.io
   labels:
     app.kubernetes.io/name: webhook
   annotations:
-    certmanager.k8s.io/inject-ca-from-secret: "cert-manager/cert-manager-webhook-tls"
     argocd.argoproj.io/sync-wave: "2"
-spec:
-  group: webhook.certmanager.k8s.io
-  groupPriorityMinimum: 1000
-  versionPriority: 15
-  service:
-    name: cert-manager-webhook
-    namespace: cert-manager
-  version: v1beta1
