--- a/cert-manager/upstream/kustomization.yaml
+++ b/cert-manager/upstream/kustomization.yaml
@@ -1,6 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-bases:
-  - ../upstream
-patches:
-  - apiservice.yaml
+resources:
+  - cert-manager.yaml
