cert-manager: add upstream manifest

--- a/cert-manager/base/kustomization.yaml
+++ b/cert-manager/base/kustomization.yaml
@@ -4,3 +4,8 @@ bases:
   - ../upstream
 patches:
   - apiservice.yaml
+  - deployment.yaml
+  - mutatingwebhookconfiguration.yaml
+  - rbac.yaml
+  - service.yaml
+  - validatingwebhookconfiguration.yaml
