--- a/cert-manager/base/deployment.yaml
+++ b/cert-manager/base/deployment.yaml
@@ -34,6 +34,7 @@ spec:
           - --webhook-ca-secret=cert-manager-webhook-ca
           - --webhook-serving-secret=cert-manager-webhook-tls
           - --webhook-dns-names=cert-manager-webhook,cert-manager-webhook.cert-manager,cert-manager-webhook.cert-manager.svc
+          env:
           - name: NO_PROXY
             value: 10.0.0.0/8
           - name: HTTP_PROXY
