--- a/cert-manager/base/kustomization.yaml
+++ b/cert-manager/base/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-bases:
-  - ../upstream
+resources:
+  - upstream/cert-manager.yaml
 patches:
   - apiservice.yaml
   - deployment.yaml
