contour: update cluster role for contour-plus
argocd: fix invalid certificate in kindtest

--- a/ingress/base/contour/rbac.yaml
+++ b/ingress/base/contour/rbac.yaml
@@ -118,6 +118,58 @@ metadata:
   name: contour-plus
 rules:
   - apiGroups:
+      - projectcontour.io
+    resources:
+      - httpproxies
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - projectcontour.io
+    resources:
+      - httpproxies/status
+    verbs:
+      - get
+  - apiGroups:
+      - externaldns.k8s.io
+    resources:
+      - dnsendpoints
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
+      - cert-manager.io
+    resources:
+      - certificates
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+  - apiGroups:
+      - ""
+    resources:
+      - services
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - ""
+    resources:
+      - services/status
+    verbs:
+      - get
+  - apiGroups:
       - contour.heptio.com
     resources:
       - ingressroutes
@@ -161,6 +213,7 @@ rules:
       - services
     verbs:
       - get
+      - list
       - watch
   - apiGroups:
       - ""
