--- a/argocd-config/overlays/kind/kustomization.yaml
+++ b/argocd-config/overlays/kind/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 bases:
 - ../../base
 patchesStrategicMerge:
+- argocd-ingress.yaml
 - external-dns.yaml
 - cert-manager.yaml
 - ingress.yaml
