Add application for local-pv-provisioner

--- a/argocd-config/base/kustomization.yaml
+++ b/argocd-config/base/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
 - elastic.yaml
 - external-dns.yaml
 - ingress.yaml
+- local-pv-provisioner.yaml
 - metallb.yaml
 - monitoring.yaml
 - namespaces.yaml
