--- a/argocd-config/overlays/kind/kustomization.yaml
+++ b/argocd-config/overlays/kind/kustomization.yaml
@@ -8,6 +8,7 @@ patchesStrategicMerge:
 - bmc-reverse-proxy.yaml
 - cert-manager.yaml
 - ingress.yaml
+- local-pv-provisioner.yaml
 - metallb.yaml
 - monitoring.yaml
 - network-policy.yaml
