--- a/argocd-config/base/local-pv-provisioner.yaml
+++ b/argocd-config/base/local-pv-provisioner.yaml
@@ -13,7 +13,7 @@ spec:
     path: local-pv-provisioner/base
   destination:
     server: https://kubernetes.default.svc
-    namespace: local-pv-provisioner
+    namespace: kube-system
   syncPolicy:
     automated:
       prune: true
