--- a/local-pv-provisioner/base/clusterrolebinding.yaml
+++ b/local-pv-provisioner/base/clusterrolebinding.yaml
@@ -9,4 +9,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: local-pv-provisioner
-    namespace: local-pv-provisioner
+    namespace: kube-system
