--- a/local-pv-provisioner/base/kustomization.yaml
+++ b/local-pv-provisioner/base/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
   - clusterrolebinding.yaml
   - storageclass.yaml
   - daemonset.yaml
+  - podsecuritypolicy.yaml
   - clusterrole.yaml
   - serviceaccount.yaml
