Fix target revision for stage0

--- a/argocd-config/overlays/stage0/kustomization.yaml
+++ b/argocd-config/overlays/stage0/kustomization.yaml
@@ -11,6 +11,7 @@ patchesStrategicMerge:
 - elastic.yaml
 - external-dns.yaml
 - ingress.yaml
+- local-pv-provisioner.yaml
 - metallb.yaml
 - monitoring.yaml
 - namespaces.yaml
