--- a/local-pv-provisioner/overlays/gcp/daemonset.yaml
+++ b/local-pv-provisioner/overlays/gcp/daemonset.yaml
@@ -8,6 +8,6 @@ spec:
       containers:
         - name: local-pv-provisioner
           args:
-            - --device-dir=/dev
-            - --device-name-filter=dm-[23]$
+            - --device-dir=/dev/crypt-disk/by-path
+            - --device-name-filter=.+:0[a-z]\.0$
             - --polling-interval=10s
